# code-analysis-tool

./: .env.example  .flake8  .gitignore  DEPLOYMENT_GUIDE.md  ORGANIZATION_SUMMARY.md  README.md  USAGE_GUIDE.md  check_github_status.sh  cleanup.py  config.yaml  ips.txt  package.json  professional_code_auditor_v2.py  push_github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_monitor_v2.sh  setup_monitor_v2.sh.backup.20251227_150246  setup_monitor_v2.sh.old  test_builds.sh
.github/workflows/: audit.yml  build.yml  ci.yml  main.yml  multi-platform.yml  release.yml
analyzers/: enhanced_analyzer.py  final_local_analyzer.py  final_local_analyzer.py.bak
audit_report_backup/: latest_report.html
monitor-stack/: docker-compose.yml
monitor-stack/alertmanager/: alertmanager.yml
monitor-stack/prometheus/: prometheus.yml
monitor-stack/prometheus/rules/: node_rules.yml
scripts/: README.md  check_code_quality.sh  clean_project.sh  fix_code_quality.sh  manage_project.sh  setup_monitor_v2.sh
src/: example.js  example.py
